--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,18 @@
 
-.titulo{
-  text-align: center;
+
+h1{
   font-size: 3.8rem;
+}
+
+h2{
+  font-size: 2.8rem;
+}
+
+h3{
+  font-size: 1.8rem;
+}
+h1,h2,h3{
+  text-align: center;
 }
 
 .titulo span{
@@ -14,9 +25,18 @@
   --primario: #ffc107;
   --secundario: #0097a7;
   --gris: #757575;
+  --grisClaro:#b6b6b6;
+}
+html{
+  font-size: 62.5%;
+}
+body{
+  font-size: 16px;
+  font-family: 'krub',sans-serif;
+  background:linear-gradient(to top,var(--grisClaro)0%,var(--blanco)100%);
 }
 .navegacion-principal{
-  background-color: var(--secundario);
+
  padding: 1rem;
  display:flex; /* flexbox esta diseñado para alinear elementos en tus diseños*/
 /*jutify-content es para filas / align-items es para columnas (flex-direction)*/
@@ -30,7 +50,6 @@ align-items: center;
 @media(min-width: 768px){
   .navegacion-principal{
     flex-direction: row;
-    justify-content: flex-start;
   }
 }
 
@@ -49,8 +68,8 @@ color :var(--oscuro)
 
 }
 .contenedor{
-  width: 120rem; /*1200 pixeles por que 1 rem es igual a 10px*/
-  
+  max-width: 120rem; /*1200 pixeles por que 1 rem es igual a 10px*/
+
 margin: 0 auto;
 }
 
@@ -58,11 +77,7 @@ margin: 0 auto;
   background-color: var(--secundario);
 }
 
-/*se aplica desde 0 pixeles*/
-body{
-  background-color: blue ;
 
-}
 /*recomendado
 480 px para mobiles
 768 px para tablets
@@ -83,5 +98,101 @@ body{
 .hero{
   background-image: url(../img/hero.jpg);/*es para regresar un nivel de directorio ya que la carpeta "img" esta fuera de css*/
   background-size: cover;
+  height: 450px;/*Alto del elemento hero*/
+  position: relative;/*para manipular la pocision.El padre siempredebe de ser relativo*/
 
 }
+
+.contenido-hero{
+  position: absolute;
+  background-color: rgba(0,0,0,.7);
+  width: 100%;
+  height: 100%;
+ /*alinear vertical y horizontalmente*/
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ color: var(--blanco);
+
+}
+.contenido-hero p,
+.contenido-hero h2{
+  color: var(--blanco)
+}
+
+
+
+.titulo span{
+  font-size: 2rem;
+}
+
+/* Estilos para el botón Contactar */
+.btn-contacto-container{
+  background-color: #26939f; /* Color de fondo */
+  color: white; /* Color del texto */
+  padding: 15px 30px; /* Espaciado interno (arriba/abajo, izquierda/derecha) */
+  text-align: center; /* Centrar el texto */
+  text-decoration: none; /* Quitar subrayado */
+  display: inline-block;
+  font-size: 16px; /* Tamaño del texto */
+  border-radius: 5px; /* Bordes redondeados */
+  border: none; /* Sin borde */
+  cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+  transition: background-color 0.3s ease; /* Transición suave al cambiar de color */
+
+}
+
+.btn-contactar:hover {
+  background-color:#26939f; /* Color al pasar el mouse por encima */
+}
+
+/* Contenedor para centrar el botón */
+.btn-contacto-container {
+  margin-top: 20px; /* Espaciado superior */
+  text-align: center; /* Centra el botón horizontalmente */
+}
+
+
+.Ubicacion{
+  display:flex;
+  align-items:flex-end;
+}
+/*servicios*/
+@media (min-width: 768px){
+  .servicios{
+    display: grid;
+    /*grid-template-columns:1fr 1fr 1fr por fracciones
+    /*grid-template-columns: 25% 25% 25% por porcentaje*/
+    grid-template-columns: repeat(3,1fr);
+    /*esta propiedad define el area de las columnas t la funcion repeat() repite 3 veces 1 fraccion en el grid/rejilla*/
+    column-gap:1rem; /*espacio*/
+  }
+}
+/*centrar iconos*/
+.servicio{
+    display: flex;
+    flex-direction:column ;
+    align-items:center;
+
+  h3{
+    color:var(--secundario);
+    font-weight: normal;
+  }
+
+  p{
+    text-align: center;
+    line-height:2;/*interlineado*/
+
+  }
+
+  .iconos{
+    width:15rem;
+    height:15rem;
+    background-color: var(--primario);
+    border-radius: 50%;   /*lo hace circular*/
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+  }
+}
+
