--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,77 @@ margin: 0 auto;
   }
 }
 
+/*contacto*/
+  .formulario{
+    background-color: var(--gris);
+    width: min(60rem,100%);
+    /*que es mas pequeño, 60 rem o el 100% del tamaño de la pantalla*/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius:  1rem;
+
+  }
+
+.formulario{
+  border: none;
+
+}
+.formulario legend{
+ text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.8rem;
+margin-bottom: 2rem;
+color:var(--primario);
+
+}
+.campo label{
+color: var(--blanco);
+margin-bottom: .5rem;
+  display:flex;
+}
+
+.input-text{
+  width: 100%;
+  border:none;
+  padding:1.5rem;
+  border-radius:.5rem;
+}
+
+.campo textarea{
+  height: 20rem;
+
+}
+/*utilidades*/
+.w-sm-100{
+  width:100%;
+
+}
+@media(min-width:768px){
+  .w-sm-100{
+    width:auto;
+  }
+}
+
+.flex{
+  display:flex;
+}
+.alinear-derecha{
+  justify-content:flex-end;
+
+}
+
+@media(min-width:768px){
+  .contenedor-campos{
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    column-gap:1rem;
+    grid-template-rows:auto auto 20rem;/*darle espacio de cada fila*/
+  }
+  /*El orden seria: nombre,telefono, correo,mensaje, modificar correo y mensaje, entonces uso nth-child 3 y 4*/
+  .campo:nth-child(3),
+  .campo:nth-child(4){
+    grid-column:1/3;/*pocisiona el elemento para que vaya de la coloumna 1 a 3*/
+
+  }
+}
